# agent-rl

./: .gitignore  README.md  pyproject.toml
agent_rl/: __init__.py  agent.py  data_utils.py  estimation.py  interaction.py  task.py
notebooks/: lefebvre2017_analysis.ipynb  parameter_recovery.ipynb
scripts/: download_lefebvre2017_data.py
